tests/fail_nightly/ipsubnets.stderr
error: invalid IP address syntax
 --> tests/fail_nightly/ipsubnets.rs:4:43
  |
4 |     let _ = ipsubnets!("2001:db8::32:23", "2001:db8::32::ffff", 48);
  |                                           ^^^^^^^^^^^^^^^^^^^^

error: invalid IP address syntax
 --> tests/fail_nightly/ipsubnets.rs:5:24
  |
5 |     let _ = ipsubnets!("2001:db8::32::23", "2001:db8::32:ffff", 48);
  |                        ^^^^^^^^^^^^^^^^^^

error: Minimum prefix must be 32 or less
 --> tests/fail_nightly/ipsubnets.rs:5:65
  |
5 |     let _ = ipsubnets!("2001:db8::32::23", "2001:db8::32:ffff", 48);
  |                                                                 ^^

error: invalid IP address syntax
 --> tests/fail_nightly/ipsubnets.rs:6:24
  |
6 |     let _ = ipsubnets!("2001:db8::32::23", "2001:db8::32::ffff", 48);
  |                        ^^^^^^^^^^^^^^^^^^

error: invalid IP address syntax
 --> tests/fail_nightly/ipsubnets.rs:6:44
  |
6 |     let _ = ipsubnets!("2001:db8::32::23", "2001:db8::32::ffff", 48);
  |                                            ^^^^^^^^^^^^^^^^^^^^

error: Minimum prefix must be 32 or less
 --> tests/fail_nightly/ipsubnets.rs:6:66
  |
6 |     let _ = ipsubnets!("2001:db8::32::23", "2001:db8::32::ffff", 48);
  |                                                                  ^^

error: Addr is IPv4 but IPv6 is expected
 --> tests/fail_nightly/ipsubnets.rs:7:43
  |
7 |     let _ = ipsubnets!("2001:db8::32:23", "10.0.0.2", 48);
  |                                           ^^^^^^^^^^

error: Addr is IPv6 but IPv4 is expected
 --> tests/fail_nightly/ipsubnets.rs:8:36
  |
8 |     let _ = ipsubnets!("10.0.0.1", "2001:db8::32:23", 48);
  |                                    ^^^^^^^^^^^^^^^^^

error: Minimum prefix must be 32 or less
 --> tests/fail_nightly/ipsubnets.rs:8:55
  |
8 |     let _ = ipsubnets!("10.0.0.1", "2001:db8::32:23", 48);
  |                                                       ^^

error: Addr is IPv4 but IPv6 is expected
 --> tests/fail_nightly/ipsubnets.rs:9:43
  |
9 |     let _ = ipsubnets!("2001:db8::32:23", "10.0.0.1", 48);
  |                                           ^^^^^^^^^^

error: invalid IP address syntax
  --> tests/fail_nightly/ipsubnets.rs:10:24
   |
10 |     let _ = ipsubnets!("100.0.0", "10.0.0.255", 48);
   |                        ^^^^^^^^^

error: Minimum prefix must be 32 or less
  --> tests/fail_nightly/ipsubnets.rs:10:49
   |
10 |     let _ = ipsubnets!("100.0.0", "10.0.0.255", 48);
   |                                                 ^^

error: invalid IP address syntax
  --> tests/fail_nightly/ipsubnets.rs:11:36
   |
11 |     let _ = ipsubnets!("10.0.0.0", "10.0.0255", 24);
   |                                    ^^^^^^^^^^^

error: Minimum prefix must be 128 or less
  --> tests/fail_nightly/ipsubnets.rs:12:64
   |
12 |     let _ = ipsubnets!("2001:db8::32:23", "2001:db8::32:ffff", 129);
   |                                                                ^^^

error: number too large to fit in target type
  --> tests/fail_nightly/ipsubnets.rs:13:64
   |
13 |     let _ = ipsubnets!("2001:db8::32:23", "2001:db8::32:ffff", 260);
   |                                                                ^^^

error: Minimum prefix must be 32 or less
  --> tests/fail_nightly/ipsubnets.rs:15:49
   |
15 |     let _ = ipsubnets!("10.0.0.1", "10.0.10.1", 33);
   |                                                 ^^

error: number too large to fit in target type
  --> tests/fail_nightly/ipsubnets.rs:16:49
   |
16 |     let _ = ipsubnets!("10.0.0.1", "10.0.10.1", 260);
   |                                                 ^^^
